@@ -31,13 +31,13 @@ Requires: libbde = %{version}-%{release} @ax_libcsystem_spec_requires@ @ax_libfu
 Several tools for accessing the BitLocker encrypted volumes
 
 %package python
-Summary: Python binding for libbde
+Summary: Python bindings for libbde
 Group: System Environment/Libraries
 Requires: libbde = %{version}-%{release} python
 BuildRequires: python-devel
 
 %description python
-Python binding for libbde
+Python bindings for libbde
 
 %prep
 %setup -q
